--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,7 @@ header {
     background-color: teal;
     transition: scale(1.1);
 }
+
+.third:active {
+    background-color: mediumaquamarine;
+}
